<resources>
    <string name="app_name">Xirtam Media Player</string>
    <string name="pass">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="icono_de_login">icono de login</string>
    <string name="enter">Entrar</string>
    <string name="g_nero">Género</string>
    <string name="spinner_generos">Spinner de géneros</string>
    <string name="grupo">Grupo</string>
    <string name="canci_n">Canción</string>
    <string name="playPause">Botón de play y pausa</string>
    <string name="bsString">Bandas Sonoras</string>
    <string name="rockString">Rock Alternativo</string>
    <string name="indieString">Indie</string>
</resources>